# WebAPI-Sample-DotNet-7

./: .env.example  Dockerfile  GRAPHQL_SPEC.md  README.md  Sample.sln  docker-compose.yml  global.json
.github/workflows/: ci.yml
go-api/: Dockerfile  README.md  go.mod
go-api/cmd/server/: main.go
go-api/internal/domain/: education.go
go-api/internal/dto/: education.go
go-api/internal/handler/: education.go
go-api/internal/repository/: education.go
go-api/internal/service/: education.go
go-api/migrations/: 001_create_educations.up.sql
rust-api/crates/application/: Cargo.toml
rust-api/crates/application/src/: dtos.rs  services.rs
rust-api/crates/domain/: Cargo.toml
rust-api/crates/domain/src/: entities.rs  error.rs  repositories.rs
rust-api/crates/infrastructure/: Cargo.toml
rust-api/crates/web_api/: Cargo.toml
rust-api/crates/web_api/src/: main.rs
rust-api/migrations/: 001_initialize.sql
src/Application/: Application.csproj
src/Application/Dtos/: EducationDto.cs  EducationStatisticsDto.cs
src/Application/Service/: EducationService.cs
src/Infrastructure/: Infrastructure.csproj
src/WebApi/: Program.cs  WebApi.csproj  appsettings.Development.json  appsettings.json
tests/Application.Tests/: Application.Tests.csproj  EducationServiceTests.cs
tests/GraphQL.Tests/: GraphQL.Tests.csproj
tests/Infrastructure.Tests/: EducationRepositoryTests.cs  Infrastructure.Tests.csproj  UnitOfWorkTests.cs
tests/WebApi.Tests/: EducationsControllerAdditionalTests.cs  EducationsControllerTests.cs  WebApi.Tests.csproj
(+37 files in other folders)
