[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
thiserror = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }

[dev-dependencies]
mockall = "0.12"
