[package]
name = "web_api"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
domain = { path = "../domain" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = { version = "4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }
serde = { version = "1", features = ["derive"] }
